# MGRcpp

./: .gitignore  CMakeLists.txt  TODOs  config.cpp  config.h  datagen.cpp  main.cpp  notes.txt  okdev.cpp  performance.cfg  performance.h  results.cpp  results.h  timer.cpp  transfer.cpp  trycfg.py
Analisis/: cfg.py  run_analisis.py
HDL/src/32bit/read/: dataGenerator.v  read_32bit_fifo.v
HDL/src/32bit/write/: checkData.v  dataGenerator.v  write_32bit_fifo.v
HDL/src/duplex/bidir/: bidir_duplex_fifo.v
HDL/src/nonsym/read/: dataGenerator.v  read_nonsym_fifo.v  swiper.v
HDL/src/nonsym/write/: checkData (1).v  checkData.v  dataGenerator.v  write_fifo_64bit_top (1).v  write_fifo_64bit_top.v  write_nonsym_fifo.v
